# bookstw

./: README.md  README.zh-CN.md  README.zh-Hans.md  README.zh-Hant.md  pyproject.toml
.github/workflows/: auto-signin.yml  poetry-publish.yml
bookstw/: __init__.py
bookstw/ocr/: __init__.py  baidu.py
demo/: github-auto-signin.py
src/bookstw/: __init__.py
