[tool.poetry]
name = "bookstw"
version = "0.1.1"
description = "Simple tool to interact with books.com.tw"
authors = ["zyf722 <MaxMixAlex@protonmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
selenium = "^4.18.1"


[tool.poetry.group.dev.dependencies]
types-pillow = "^10.2.0.20240324"
types-beautifulsoup4 = "^4.12.0.20240229"
types-requests = "^2.31.0.20240311"


[tool.poetry.group.demo.dependencies]
rich = "^13.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
